@@ -1,9 +1,9 @@
 include ../packages.mk
 
-BINUTILS_VERSION=2.19.1
-MINGWRT_VERSION=3.16
-W32API_VERSION=3.13
-GCC_VERSION=4.4.1
+BINUTILS_VERSION=2.20
+MINGWRT_VERSION=3.17
+W32API_VERSION=3.14
+GCC_VERSION=4.4.3
 
 TARGET=i586-mingw32msvc
 PROGRAM_PREFIX=i586-mingw32msvc-
