@@ -1,3 +1,8 @@
+2010-02-24 Borut Razem <borut.razem AT siol.net>
+
+	* packages/build.mingw32/Makefilei: updated to gcc 4.4.3
+	  binutils 2.20, migwrt 3.16, w32api 3.14
+
 2010-02-07 Borut Razem <borut.razem AT siol.net>
 
 	* packages/build.nsis/Makefile: updated to NSIS 2.46
